--- a/app/assets/stylesheets/elements/_standout.scss
+++ b/app/assets/stylesheets/elements/_standout.scss
@@ -59,7 +59,7 @@
       }
     }
 
-    img {
+    svg {
       display: none;
 
       @include media-min(md) {
